# pvz-svc

./: .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.ci/: .dockerignore  Dockerfile
app/: __init__.py
app/configs/: log_cfg.py
app/consts/: constants.py  env.py
app/core/: database.py  env.py
app/handlers/: error_handlers.py
app/models/: __init__.py  achievement.py  base_constraint.py  base_model.py  garden.py  item.py  level.py  minigame.py  plant.py  puzzle.py  survival.py  zombie.py
app/models/enums/: __init__.py  plant_toughness.py  usage.py
app/routes/: __init__.py  achievement.py  base_route.py  garden.py  health.py  item.py  level.py  minigame.py  plant.py  puzzle.py  survival.py  zombie.py
automation/features/: config.py  constants.py  health.feature  model.feature
automation/features/assertions/: rest.py
automation/features/decorators/: api_validator.py
automation/features/steps/: generic_api_step.py  health_step.py  model_step.py
dev_tools/: pvz-insomnia-file.json
src/: .env.sample  main.py  test_main.py
src/consts/: constants.py
src/models/: __init__.py  achievement.py  base_constraint.py  base_model.py  garden.py  item.py  level.py  minigame.py  plant.py  puzzle.py  survival.py  zombie.py
src/models/enums/: __init__.py  adv_ref.py  damage.py  effect.py  plant_toughness.py  production.py  puzzle_category.py  recharge.py  speed.py  toughness.py  usage.py  zombie_toughness.py
src/routes/: __init__.py  achievement.py  base_route.py  garden.py  health.py  item.py  level.py  minigame.py  plant.py  puzzle.py  survival.py  zombie.py
tests/: conftest.py
tests/route/: test_health.py  test_plant.py
(+13 files in other folders)
