[tool.poetry]
name = "pvz-svc"
version = "0.1.0"
description = ""
authors = ["gal16v8d"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.2"
pymongo = "^4.13.0"
uvicorn = "^0.34.3"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.4.0"
mongomock = "^4.3.0"
httpx = "^0.28.1"
black = "^25.1.0"
mypy = "^1.16.0"
pytest-cov = "^6.1.1"
behave = "^1.2.6"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
